switching to more OOP style of code and Google style of naming

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,12 @@ cmake_minimum_required(VERSION 3.11)
 project(metoxid)
 
 find_package(Curses REQUIRED)
+find_package(exiv2 REQUIRED)
 
 set(SOURCES
-    src/main.cpp)
+    src/main.cpp
+    src/utils.cpp
+    src/metadata.cpp)
 
 add_executable(metoxid ${SOURCES})
 
@@ -17,3 +20,5 @@ else()
 endif()
 
 target_include_directories(metoxid PRIVATE include)
+target_include_directories(metoxid PRIVATE ${exiv2_INCLUDE_DIRS})
+target_link_libraries(metoxid PRIVATE exiv2)
